[tool.poetry]
name = "readsomestuff-fastapi"
version = "0.1.0"
description = ""
authors = ["dacodev <dale@dacodev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.102.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
